<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Correct / Wrong"
        android:textSize="30dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="Sound Clip"
        android:textSize="30dp"
        android:layout_gravity="center"/>

    <GridLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:columnCount="2"
        android:rowCount="8">

        <Button
            style="@style/CustomButton"
            android:text=""
            android:id="@+id/blankButton1"
            />

        <Button
            style="@style/CustomButton"
            android:text="@string/unison"
            android:id="@+id/unison_button"
            />

        <Button
            style="@style/CustomButton"
            android:text="@string/minor2"
            android:id="@+id/minor2_button"
            />

        <Button
            style="@style/CustomButton"
            android:text="@string/major2"
            android:id="@+id/major2_button"
            />

        <Button
            style="@style/CustomButton"
            android:text="@string/minor3"
            android:id="@+id/minor3_button"
            />

        <Button
            style="@style/CustomButton"
            android:text="@string/major3"
            android:id="@+id/major3_button"
            />

        <Button
            style="@style/CustomButton"
            android:text=""
            android:id="@+id/blankButton2"
            />

        <Button
            style="@style/CustomButton"
            android:text="@string/perfect4"
            android:id="@+id/perfect_button"
            />

        <Button
            style="@style/CustomButton"
            android:text="@string/tritone"
            android:id="@+id/tritone_button"
            />

        <Button
            style="@style/CustomButton"
            android:text="@string/perfect5"
            android:id="@+id/perfect5_button"
            />

        <Button
            style="@style/CustomButton"
            android:text="@string/minor6"
            android:id="@+id/minor6_button"
            />

        <Button
            style="@style/CustomButton"
            android:text="@string/major6"
            android:id="@+id/major6_button"
            />

        <Button
            style="@style/CustomButton"
            android:text="@string/minor7"
            android:id="@+id/minor7_button"
            />

        <Button
            style="@style/CustomButton"
            android:text="@string/major7"
            android:id="@+id/major7_button"
            />

        <Button
            style="@style/CustomButton"
            android:text=""
            android:id="@+id/blankButton3"
            />

        <Button
            style="@style/CustomButton"
            android:text="@string/octave"
            android:id="@+id/octave_button"
            />
    </GridLayout>

    <Button
        style="@style/CustomButton"
        android:text="@string/revealAns"
        android:layout_gravity="center"
        android:id="@+id/rev_ans"
        />



</LinearLayout>